# browserinfocm

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.rs
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
docs/: review.1.md  review.2.md  review.3.md  review.4.md
migrations/: 20260107001015_create-tables.down.sql  20260107001015_create-tables.up.sql
notes/: database-naming-convention.md
src/: lib.rs  main.rs
src/li/: mod.rs
src/li/backends/: config.rs  db_sqlite.rs  debug.rs  forwarder.rs  mod.rs
